--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label for="city">Enter a location for weather information</label>
             <input type="text" name="city" class="form-control p-4">
         </form> 
-        `<div class="card shadow-lg rounded">
+        `<div class="card shadow-lg rounded d-none">
            <!--image of whether day or night. Will be dynamically injected into the DOM depending on the time of day--> 
            <!--using placeholder.com to get an image to fill as dummy-->
            <img src="https://via.placeholder.com/400x300" alt="" class="time card-img-top">
